# scenepic

./: .clang-format  .flake8  .gitignore  CHANGELOG.md  CITATION  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  RELEASE_NOTES  SUPPORT.md  bundle.js  debug.js  nuget.config  package-lock.json  package.json  pyproject.toml  requirements-flake8.txt  requirements.txt  scenepic-config.cmake.in  setup.cfg  setup.py  svt-config.cmake.in  tsconfig.json  watch.js
.github/workflows/: build_wheels.yml  linux.yml  mac.yml  pr-gate.yml  windows.yml
ci/: download_deps.py
ci/assets/: cameras.json
ci/nuget/: template.nuspec.in  template.targets.in
cmake/: svtConfig.cmake.in
cppsrc/doc/: CMakeLists.txt  Doxyfile.in
cppsrc/examples/: CMakeLists.txt  audio_tracks.cpp  circles_video.cpp  getting_started.cpp  hello_world.cpp  mesh_animation.cpp  multiview.cpp  tutorial.cpp  waves.cpp
cppsrc/scenepic/: CMakeLists.txt  __init__.py  audio_track.cpp  audio_track.py  base64.cpp  camera.cpp  canvas2d.cpp  canvas3d.cpp  canvas3d.py  color.cpp  constants.cpp  drop_down_menu.cpp  focus_point.cpp  frame2d.cpp  frame2d.py  frame3d.cpp  frame3d.py  graph.cpp  image.cpp  internal.h  io.cpp  js_lib.h.in  json_value.cpp  label.cpp  layer_settings.cpp  loop_subdivision_stencil.cpp  mesh.cpp  mesh.py  mesh_info.cpp  mesh_primitives.cpp  mesh_update.cpp  python.cpp  scene.cpp  scene.py  scene_compression.cpp  shading.cpp  text_panel.cpp  transforms.cpp  ui_parameters.cpp  version.h.in  (+5 more)
cppsrc/svt/: CMakeLists.txt  __init__.py  audio_track.cpp  audio_track.py  camera.cpp  canvas2d.cpp  canvas2d.py  canvas3d.cpp  canvas3d.py  color.cpp  constants.cpp  drop_down_menu.cpp  focus_point.cpp  frame2d.cpp  frame2d.py  frame3d.cpp  frame3d.py  graph.cpp  image.cpp  image.py  internal.h  io.cpp  js_lib.h.in  json_value.cpp  label.cpp  layer_settings.cpp  loop_subdivision_stencil.cpp  mesh.cpp  mesh.py  mesh_info.cpp  mesh_primitives.cpp  mesh_update.cpp  python.cpp  scene.cpp  scene.py  scene_compression.cpp  shading.cpp  text_panel.cpp  transforms.cpp  ui_parameters.cpp  (+7 more)
docs/: CMakeLists.txt  binaries.html  camera_movement.html  getting_started.html  index.html  mesh_animation.html
docs/cpp/: _r_e_a_d_m_e_8md.html  annotated.html  audio__track_8h.html  audio__track_8h_source.html  camera_8h.html  camera_8h_source.html  canvas2d_8h.html  canvas2d_8h_source.html  canvas3d_8h.html  canvas3d_8h_source.html  classes.html  classscenepic_1_1_audio_track-members.html  classscenepic_1_1_audio_track.html  classscenepic_1_1_camera-members.html  classscenepic_1_1_camera.html  classscenepic_1_1_canvas2_d-members.html  classscenepic_1_1_canvas2_d.html  classscenepic_1_1_canvas3_d-members.html  classscenepic_1_1_canvas3_d.html  classscenepic_1_1_color-members.html  classscenepic_1_1_color.html  classscenepic_1_1_drop_down_menu-members.html  classscenepic_1_1_drop_down_menu.html  classscenepic_1_1_focus_point-members.html  classscenepic_1_1_focus_point.html  classscenepic_1_1_frame2_d-members.html  classscenepic_1_1_frame2_d.html  classscenepic_1_1_frame3_d-members.html  classscenepic_1_1_frame3_d.html  classscenepic_1_1_graph-members.html  classscenepic_1_1_graph.html  classscenepic_1_1_image-members.html  classscenepic_1_1_image.html  classscenepic_1_1_json_value-members.html  classscenepic_1_1_json_value.html  (+147 more)
pipelines/: azure-pipelines.yml  cpp-format.yml  pr-gate.yml  python-linting.yml  python-wheels.yml
python_examples/: Hello World.ipynb  SVT-Python-Tutorial.ipynb  build_web_examples.py  camera_movement.py  example_video.py  getting_started.ipynb  getting_started.py  hello_scenepic.py  mesh_animation.py  overlap.py  tutorial.ipynb
scripts/: scenepic_logo.py
src/examples/: CMakeLists.txt  getting_started.cpp  hello_scenepic.cpp  tutorial.cpp
src/scenepic/: CMakeLists.txt  __init__.py  audio_track.cpp  audio_track.py  audio_track.pyi  camera.cpp  camera.py  camera.pyi  canvas2d.cpp  canvas2d.py  canvas2d.pyi  canvas3d.cpp  canvas3d.py  canvas3d.pyi  drop_down_menu.py  drop_down_menu.pyi  focus_point.cpp  focus_point.py  focus_point.pyi  frame2d.cpp  frame2d.py  frame2d.pyi  frame3d.cpp  frame3d.py  frame3d.pyi  globals.py  globals.pyi  graph.cpp  graph.py  graph.pyi  image.cpp  image.py  image.pyi  internal.h  io.cpp  label.py  label.pyi  layer_settings.cpp  layer_settings.py  layer_settings.pyi  (+33 more)
src/scenepic/cpp-base64/: base64.cpp
src/scenepic/json/: json.h  jsoncpp.cpp
src/scenepic/miniz/: miniz.cpp  miniz.h
src/scenepic/tinyobj/: tiny_obj_loader.h
test/: CMakeLists.txt  audio.cpp  base64.cpp  camera.cpp  canvas2d.cpp  canvas3d.cpp  compression.cpp  conftest.py  drop_down_menu.cpp  frame2d.cpp  frame3d.cpp  graph.cpp  image.cpp  io.cpp  label.cpp  layer_settings.cpp  matrix.cpp  mesh_update.cpp  primitives.cpp  quantization.cpp  scene.cpp  scenepic_tests.cpp  scenepic_tests.h  shading.cpp  stencil.cpp  svt_tests.cpp  svt_tests.h  test_commands.py  test_hello_world.py  test_python_tutorial.py  test_sky_box.py  test_stencil.py  test_transforms.py  test_tutorial.py  test_video_writer.py  text_panel.cpp  transforms.cpp  ui_parameters.cpp  video.cpp
test/assets/: audio.json  camera.json  camera_frustum.json  canvas2d.json  canvas2d_cleared.json  canvas3d.json  canvas3d_cleared.json  compression.json  cone.json  coordinate_axes.json  coordinate_axes_0.json  coordinate_axes_1.json  cube.json  cube_texture.json  cylinder.json  disc.json  drop_down_menu.json  frame2d.json  frame3d.json  graph.json  icosphere.json  icosphere_texture.json  image.json  image_mesh.json  io.json  label.json  layer_settings_2d.json  layer_settings_3d.json  line_cloud.json  loop_subdivision_stencil.json  point_cloud.json  quad.json  quantization.json  scene.json  scene_cleared.json  shading.json  sphere.json  text_panel.json  thickline.json  triangle.json  (+9 more)
tssrc/: CSSStyles.ts  Canvas2D.ts  Canvas3D.ts  CanvasBase.ts  DropDownMenu.ts  Graph.ts  Mesh.ts  MeshPicker.ts  Misc.ts  SPScene.ts  ScenePic.ts  Shaders.ts  TextPanel.ts  VertexBuffers.ts  WebGLMeshBuffers.ts  WebVRBackground.ts  ts_assets.py
(+257 files in other folders)
